[project]
name = "parallel-web-mcp"
version = "1.0.0"
description = "Parallel Web Search MCP Server"
requires-python = ">=3.10"
dependencies = [
    "dedalus-mcp>=0.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
